fix gap between ifram

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1092,7 +1092,7 @@ section {
 }
 
 iframe{
-  width: 350px;
+  width: 100%;
   height: 350px;
 }
 .info{
